--- a/Diabetic_Retinopathy_224x224_(2019_Data).ipynb
+++ b/Diabetic_Retinopathy_224x224_(2019_Data).ipynb
@@ -6,7 +6,7 @@
       "name": "Diabetic Retinopathy 224x224 (2019 Data).ipynb",
       "provenance": [],
       "mount_file_id": "1fMzBLirtVhrsifDAvj5PxrQkrF1Hw9hs",
-      "authorship_tag": "ABX9TyOv2UmzJ7Q/0+KZD7RJjTU7",
+      "authorship_tag": "ABX9TyOy3zdUWH8T+xsgwKALNy+C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,18 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Rahulraj31/Diabetic-Retinopathy/blob/main/Diabetic_Retinopathy_224x224_(2019_Data).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z39U3Lxvabjq"
+      },
+      "source": [
+        "\n",
+        "# Diabetic Retinopathy 224x224 (2019 Data)\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -394,16 +406,85 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fyCC2oN7ZilD",
+        "outputId": "47ad3849-bfc5-4e42-9746-336ffee49cb7"
+      },
+      "source": [
+        "cnn_base.summary()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"vgg16\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+            "_________________________________________________________________\n",
+            "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
+            "_________________________________________________________________\n",
+            "block1_conv2 (Conv2D)        (None, 224, 224, 64)      36928     \n",
+            "_________________________________________________________________\n",
+            "block1_pool (MaxPooling2D)   (None, 112, 112, 64)      0         \n",
+            "_________________________________________________________________\n",
+            "block2_conv1 (Conv2D)        (None, 112, 112, 128)     73856     \n",
+            "_________________________________________________________________\n",
+            "block2_conv2 (Conv2D)        (None, 112, 112, 128)     147584    \n",
+            "_________________________________________________________________\n",
+            "block2_pool (MaxPooling2D)   (None, 56, 56, 128)       0         \n",
+            "_________________________________________________________________\n",
+            "block3_conv1 (Conv2D)        (None, 56, 56, 256)       295168    \n",
+            "_________________________________________________________________\n",
+            "block3_conv2 (Conv2D)        (None, 56, 56, 256)       590080    \n",
+            "_________________________________________________________________\n",
+            "block3_conv3 (Conv2D)        (None, 56, 56, 256)       590080    \n",
+            "_________________________________________________________________\n",
+            "block3_pool (MaxPooling2D)   (None, 28, 28, 256)       0         \n",
+            "_________________________________________________________________\n",
+            "block4_conv1 (Conv2D)        (None, 28, 28, 512)       1180160   \n",
+            "_________________________________________________________________\n",
+            "block4_conv2 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block4_conv3 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block4_pool (MaxPooling2D)   (None, 14, 14, 512)       0         \n",
+            "_________________________________________________________________\n",
+            "block5_conv1 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_conv2 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_conv3 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
+            "_________________________________________________________________\n",
+            "global_max_pooling2d (Global (None, 512)               0         \n",
+            "=================================================================\n",
+            "Total params: 14,714,688\n",
+            "Trainable params: 0\n",
+            "Non-trainable params: 14,714,688\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "xpunetKOY9gz"
       },
       "source": [
         "pretrainedCNN_model = Sequential([\n",
         "                                  cnn_base,\n",
-        "                                  layers.Flatten(),\n",
+        "                                  #layers.Flatten(),\n",
         "                                  layers.Dense(1000, activation = 'relu'),\n",
-        "                                 \n",
         "                                  layers.Dense(500, activation = 'relu'),\n",
-        "                                   layers.Dropout(0.25),\n",
+        "                                  layers.Dropout(0.25),\n",
         "                                  layers.Dense(100, activation = 'relu'),\n",
         "                                  layers.Dense(5, activation = 'softmax')  ,  \n",
         "])"
